Fix #11 Add ability to manage enabled hostnames from an option page

--- a/src/popup.html
+++ b/src/popup.html
@@ -17,5 +17,7 @@
     </section>
     <hr />
     <p id="reportBrokenSite"></p>
+    <hr />
+    <button id="">Settings</button>
   </body>
 </html>
